--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,16 @@ server.port=8086
 spring.application.name=messaging-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/MessagesDatabase
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
