feat: chat push notifications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.kafka.bootstrap-servers=localhost:29092
