feat: added dependencies for monitoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.sql.init.mode=always
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/MessagesDatabase
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=postgresql
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
@@ -18,3 +18,11 @@ spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.kafka.bootstrap-servers=localhost:29092
+
+auth-service.address=http://localhost:8081/auth-service
+
+opentracing.jaeger.udp-sender.host=${JAEGER_DOMAIN:localhost}
+opentracing.jaeger.udp-sender.port=${JAEGER_PORT:6831}
+opentracing.jaeger.log-spans=true
+
+management.endpoints.web.exposure.include=health,info,prometheus
