fix: chat hostname

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.sql.init.mode=always
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/MessagesDatabase
 spring.datasource.username=postgres
-spring.datasource.password=postgresql
+spring.datasource.password=admin
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
